ingress/dremio-ingress-copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: dremio.raffles.com.vn
spec:
  ingressClassName: nginx
  rules:
  - host: dremio.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dremio-client
            port:
              number: 9047
