ingress/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: kafka.raffles.com.vn
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka
            port:
              number: 9092
