ingress/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: raffles.com.vn
spec:
  ingressClassName: nginx
  rules:
  - host: minio-tenant.raffles.com.vn
    http:
      paths:
      - backend:
          service:
            name: minio-dev-console
            port:
              number: 9090
        path: /
        pathType: Prefix
