ingress/spark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: spark-master.raffles.com.vn
spec:
  ingressClassName: nginx
  rules:
  - host: spark-master.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-master
            port:
              number: 8080
